--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
 body{
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Poppins', sans-serif;
+    
     color: #363958;
+    margin: 0;
 }
 h1{
-    font-size: 500;
+    font-size: 50px;
 }
+h2{
+    font-size: 35px;
+}
+footer p{
+    float: left;
+    text-align: center;
+    height: 40px;
+    width: 40px;
+}
+
 section{
     height: 500px;
+    padding-bottom: 200px;
 }
 .name-highlight{
     color: coral;
@@ -16,11 +29,58 @@ section{
     color: #3E3E3E;
 }
 .half-width{
-    width: 40%;
+    width: 38%;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
 }
 .half-width img{
+    height: 20%;
     width: 100%;
+}
+.link-button{
+    border: 2px solid tomato;
+    padding: 10px,80px;
+    background-image: linear-gradient(45deg,tomato, lightSalmon ,);
+    text-decoration: none;
+    background-color: tomato;
+    border-radius: 3px;
+    font-size: 10px;
+    color: white;
+    font-weight: 700;
+
+}
+.background{
+    background-color: #e6e6e6;
+    background-repeat: no-repeat;
+}
+.background h2{
+    text-align: center;
+    padding-top: 50px;
+}
+.inquery-margin{
+    margin-top: 100px;
+}
+.inquery{
+    background: url(images/Group_33094_1.png);
+    background-color: #cccccc;
+    background-position: center;
+    position: relative;
+    background-repeat: no-repeat;
+    height: 150px;
+    width: 100%;
+    margin-left:25% ;
+    margin-right: 25%;
+    padding: 30px;
+
+}
+.inquery1{
+    background: url(images/Group_33094_1.png);
+    background-repeat: no-repeat;
+    margin: 40px,10px;
+    padding: 30px;
+
+}
+.footer-img{
+    float: left;
 }
